Add localization support for Arabic and English, enhance main app structure, and update dependencies
- Created Arabic localization file `app_localizations_ar.dart` with translations for various app strings.
- Created English localization file `app_localizations_en.dart` with translations for various app strings.
- Updated `main.dart` to include localization delegates and supported locales, and refactored app startup logic to handle onboarding and login states.
- Added necessary imports for localization and cache service initialization.
- Updated `GeneratedPluginRegistrant.swift` to register shared preferences and sqflite plugins.
- Updated `pubspec.lock` and `pubspec.yaml` to include new dependencies such as `cached_network_image`, `smooth_page_indicator`, and `intl`.

--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,7 +1,7 @@
 flutter_launcher_icons:
-  image_path: "assets/img/online_shop_logo.png"
-  android: true 
+  android: "launcher_icon"
   ios: true
+  image_path: "assets/img/online_shop_logo.svg"
   min_sdk_android: 21
-  adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/img/online_shop_logo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/img/online_shop_logo.svg"
