--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   lottie: ^3.3.1
   flutter_native_splash: ^2.4.7
   flutter_svg: ^2.2.3
+  shared_preferences: ^2.2.2
+  cached_network_image: ^3.3.1
+  smooth_page_indicator: ^1.1.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +67,7 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  generate: true
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
